--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <version>7.2.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Appium -->
         <!--
