--- a/src/main/resources/config_mobile.properties
+++ b/src/main/resources/config_mobile.properties
@@ -1,11 +1,11 @@
-username=username@username.com
-password=asecretpassword
-magiccode=thisisamagiccode
-identitynumber=192102120032
-givenname=mygivenname
-surname=mysurname
-displayname=mydisplayname
-phonenumber=+12345667888
-email=myemai@address.com
-eppn=myeppn
-support_username=myusername@support.com
+username=ove@idsec.se
+password=lq2kdvzo917s
+magiccode=mknhKYFl94fJaWaiVk2oG9Tl
+identitynumber=197501100395
+givenname=ove
+surname=semart
+displayname=ove semart
+phonenumber=+46707136728
+email=ove@idsec.se
+eppn=nunif-mados
+support_username=ovesemart@gmail.com
