--- a/src/main/resources/config_dev.properties
+++ b/src/main/resources/config_dev.properties
@@ -7,5 +7,5 @@ surname=semart
 displayname=ove semart
 phonenumber=+46707136728
 email=ove@idsec.se
-eppn=gahag-rojag
+eppn=jupuh-bukul
 support_username=ovesemart@gmail.com
