generic updates and improvements

--- a/src/main/resources/config_dev.properties
+++ b/src/main/resources/config_dev.properties
@@ -1,11 +1,11 @@
 username=ove@idsec.se
-password=lq2kdvzo917s
+password=zojk ekd7 002n
 magiccode=mknhKYFl94fJaWaiVk2oG9Tl
-identitynumber=197511100395
-givenname=ove
-surname=semart
-displayname=ove semart
-phonenumber=+46707132728
+identitynumber=199002162395
+givenname=Bernt Olof
+surname=Larsson
+displayname=Bernt Olof Larsson
+phonenumber=+46234567
 email=ove@idsec.se
-eppn=jupuh-bukul
+eppn=vasot-bovaj
 support_username=ovesemart@gmail.com
