Updates according to re-structure of eduid layout

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <version>${webdrivermanager.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.fluentlenium</groupId>
+            <artifactId>fluentlenium-core</artifactId>
+            <version>5.0.4</version>
+        </dependency>
+        <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
             <version>1.4.7</version>
