updates for feb release

--- a/src/main/resources/config_dev.properties
+++ b/src/main/resources/config_dev.properties
@@ -1,11 +1,11 @@
 username=ove@idsec.se
-password=zojk ekd7 002n
+password=xacs 0bgg krgy
 magiccode=mknhKYFl94fJaWaiVk2oG9Tl
-identitynumber=199002162395
-givenname=Bernt Olof
-surname=Larsson
-displayname=Bernt Olof Larsson
+identitynumber=198301102391
+givenname=Sven
+surname=Huling
+displayname=Sven Huling
 phonenumber=+46234567
 email=ove@idsec.se
-eppn=vasot-bovaj
+eppn=vujot-gojib
 support_username=ovesemart@gmail.com
