--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>17</java.version>
         <selenium.version>4.4.0</selenium.version>
-<!--        <selenium.version>4.28.1</selenium.version>-->
         <testng.version>7.4.0</testng.version>
-        <webdrivermanager.version>5.9.2</webdrivermanager.version>
+        <webdrivermanager.version>5.9.3</webdrivermanager.version>
         <log4j>2.19.0</log4j>
         <lombook>1.18.24</lombook>
     </properties>
@@ -59,16 +58,26 @@
             <artifactId>webdrivermanager</artifactId>
             <version>${webdrivermanager.version}</version>
         </dependency>
+<!--
         <dependency>
             <groupId>org.fluentlenium</groupId>
             <artifactId>fluentlenium-core</artifactId>
             <version>5.0.4</version>
         </dependency>
+-->
+
+        <!-- For mail -->
         <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4.7</version>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.activation</groupId>
+            <artifactId>jakarta.activation</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -81,37 +90,6 @@
             <version>1.1.1</version>
         </dependency>
 
-        <!-- Appium -->
-        <!--
-        <dependency>
-            <groupId>io.appium</groupId>
-            <artifactId>java-client</artifactId>
-            <version>7.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.lightbody.bmp</groupId>
-            <artifactId>browsermob-core</artifactId>
-            <version>2.1.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20170516</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-remote-driver</artifactId>
-            <version>4.0.0-alpha-2</version>
-            <scope>compile</scope>
-        </dependency>
-        -->
-
         <!-- https://mvnrepository.com/artifact/io.github.sukgu/automation -->
         <!-- Used for clicking on shadow DOM elements -->
         <dependency>
@@ -119,14 +97,6 @@
             <artifactId>automation</artifactId>
             <version>0.1.4.1</version>
         </dependency>
-
-        <!-- For browser stack -->
-
-<!--        <dependency>
-            <groupId>com.browserstack</groupId>
-            <artifactId>browserstack-local-java</artifactId>
-            <version>1.0.3</version>
-        </dependency>-->
 
         <!-- Full page screenshots-->
         <dependency>
