update for verify security key with eidas and generic adaptions to code changes in eduid

--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -13,11 +13,13 @@ support_password=password
 
 ## Text strings
 base_url=https://docker.eduid
-setLetterProofingCodeUrl(properties.getProperty("letter_proofing_code_url"));
-setEmailVerificationCodeUrl(properties.getProperty("email_verification_code_url"));
-setPhoneConfirmationCodeUrl(properties.getProperty("phone_confirmation_code_url"));
-setEmailResetPwCodeUrl(properties.getProperty("email_reset_pw_code_url"));
+
+letter_proofing_code_url=https://dashboard.dev.eduid.se/services/letter-proofing/get-code
+email_verification_code_url=https://signup.dev.eduid.se/services/signup/get-code/?email=
+phone_confirmation_code_url=https://dashboard.dev.eduid.se/services/phone/get-code?eppn=
+email_reset_pw_code_url=https://idp.dev.eduid.se/services/reset-password/get-email-code?eppn=
 domain=.eduid.docker
 support_url=https://support.eduid.docker
 bankid_text_sv=eduID BankID-SP i lokal miljö har begärt att du legitimerar dig.
 bankid_text_eng=eduID BankID SP in local dev has requested that you authenticate.
+idp_name=eduid local
