--- a/src/main/resources/prod.properties
+++ b/src/main/resources/prod.properties
@@ -22,3 +22,4 @@ domain=.eduid.se
 support_url=https://support.eduid.se
 bankid_text_sv=eduID BankID-SP i staging har begärt att du legitimerar dig.
 bankid_text_eng=eduID BankID SP in local dev has requested that you authenticate.
+idp_name=eduid
