--- a/src/main/resources/staging.properties
+++ b/src/main/resources/staging.properties
@@ -8,7 +8,7 @@ display_name=Sven Huling
 phone_number=+46234567
 email=email
 eppn=eppn
-support_username=support_email
+support_username=username
 support_password=password
 
 ## Environment dependent URLs
@@ -21,3 +21,4 @@ domain=.dev.eduid.se
 support_url=https://support.dev.eduid.se
 bankid_text_sv=eduID BankID-SP i staging har begärt att du legitimerar dig.
 bankid_text_eng=eduID BankID SP in staging has requested that you authenticate.
+idp_name=eduid staging
