Test of signed commit and removal of old unused properties

--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,10 @@ logs
 screenshots
 old
 reports
+config
 
 # Intelij
 *.iml
 .idea
-out
-config_prod.properties
-config_dev.properties
-config_mobile.properties
-*dev-test.xml
-
-# jmeter binaries
-jmeter
-
-# python
-__pycache__
+src/test/java/se/sunet/eduid/dev.xml
+src/main/resources/staging.properties
