--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -12,12 +12,12 @@ support_username=support@dev.eduid.se
 support_password=password
 
 ## Text strings
-base_url=https://docker.eduid
+base_url=https://eduid.docker
 
-letter_proofing_code_url=https://dashboard.dev.eduid.se/services/letter-proofing/get-code
-email_verification_code_url=https://signup.dev.eduid.se/services/signup/get-code/?email=
-phone_confirmation_code_url=https://dashboard.dev.eduid.se/services/phone/get-code?eppn=
-email_reset_pw_code_url=https://idp.dev.eduid.se/services/reset-password/get-email-code?eppn=
+letter_proofing_code_url=https://dashboard.eduid.docker/services/letter-proofing/get-code
+email_verification_code_url=https://signup.eduid.docker/services/signup/get-code/?email=
+phone_confirmation_code_url=https://dashboard.eduid.docker/services/phone/get-code?eppn=
+email_reset_pw_code_url=https://idp.eduid.docker/services/reset-password/get-email-code?eppn=
 domain=.eduid.docker
 support_url=https://support.eduid.docker
 bankid_text_sv=eduID BankID-SP i lokal miljö har begärt att du legitimerar dig.
