--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -10,6 +10,12 @@ email=sven@dev.eduid.se
 eppn=eppn-eppn
 support_username=support@dev.eduid.se
 support_password=password
+autotests_cookie_value=cookie_value
+
+# Testdata file path
+identity_number_file_path=src/main/resources/identity_numbers.txt
+given_name_file_path=src/main/resources/given_name.txt
+surname_file_path=src/main/resources/sur_name.txt
 
 ## Text strings
 base_url=https://docker.eduid
