--- a/src/main/resources/staging.properties
+++ b/src/main/resources/staging.properties
@@ -10,6 +10,12 @@ email=email
 eppn=eppn
 support_username=username
 support_password=password
+autotests_cookie_value=cookie_value
+
+# Testdata file path
+identity_number_file_path=src/main/resources/identity_numbers.txt
+given_name_file_path=src/main/resources/given_name.txt
+surname_file_path=src/main/resources/sur_name.txt
 
 ## Environment dependent URLs
 base_url=https://dev.eduid.se
