--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     </properties>
 
     <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
